Add Black Screen

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -7,5 +7,6 @@ $dark-blue: #1E2469;
 $border-button: #D6D6EB;
 $dark-gray: #6E6D8C;
 $light-gray: #949494;
+$gray: #F6F6FB;
 $border-mid-green: #9CBEB3;
 $notification-dark-blue: #306495;
