--- a/src/assets/scss/buttons.scss
+++ b/src/assets/scss/buttons.scss
@@ -14,6 +14,7 @@
   font-weight: 700;
   line-height: normal;
   font-family: 'Raleway';
+  border: 2px solid $blue;
   
 }
 
@@ -21,8 +22,13 @@
   background-color: transparent;
   border: 2px solid $border-button;
   border-radius: 5px;
-  padding: 10px 12px;
   color: $dark-gray;
   font-weight: bold;
   width: 138px;
+  display: flex;
+  height: 32px;
+  padding: 16px;
+  justify-content: center;
+  align-items: center;
+  
 }
