--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -68,3 +68,9 @@
   font-weight: 600; // SemiBold
   font-style: normal;
 }
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: 600; // SemiBold
+  font-style: normal;
+}
