--- a/src/components/procedimientoForm/ProcedimientoForm.scss
+++ b/src/components/procedimientoForm/ProcedimientoForm.scss
@@ -4,10 +4,10 @@
   display: flex;
   align-items: flex-end;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   padding: 2rem;
   max-height: 400px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &::-webkit-scrollbar {
     width: 10px;
@@ -21,7 +21,7 @@
   
   /* Handle */
   &::-webkit-scrollbar-thumb {
-    background: $dark-blue;
+    background: $border-button;
     border-radius: 5px;
   }
 
@@ -29,7 +29,6 @@
     width: 100%;
     display: flex;
     gap: 10px;
-    margin-bottom: 40px;
     h2 {
       color: $dark-blue;
       margin: 0;
@@ -39,25 +38,39 @@
       font-style: normal;
       font-weight: 400;
     }
-    button {
-      background-color: transparent;
-      color: $green;
-      font-family: "Open Sans";
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 150%;
-      align-self: flex-end;
-      &:hover {
+    .centerBotton {
+      display: flex;
+      align-items: center;
+      border-radius: 5px;
+      padding: 10px 10px;
+  
+      button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: transparent;
+        color: $green;
+        font-family: "Open Sans";
+        font-weight: 700;
+        font-size: 16px;
         border: none;
+        cursor: pointer;
+        
+        &:hover {
+          border: none;
+        }
+        .plusIcon {
+          margin-right: 10px;
+        }
       }
     }
   }
+  
 
 
   .procedimiento-form {
     align-items: flex-end;
     display: flex;
-    gap: 15px;
     width: 100%;
     gap: 30px;
     .delete {
@@ -70,10 +83,14 @@
         border: 2px solid $border-mid-green;
         margin-top: 10px;
         padding: 10px;
-        font-size: 1rem;
         width: 82%;
         border-radius: 5px;
         outline: none;
+        background-color: $gray;
+        font-family: "Open Sans";
+        font-size: 16px;
+        font-weight: 400;
+        line-height: normal;
 
         &:focus {
           border-color: #007bff; // Color de enfoque
@@ -84,7 +101,13 @@
     .m-left {
       margin-left: 20px;
     }
-
+    label{
+      font-family: "Open Sans";
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      color: $black;
+    }
     button[type="submit"] {
       background-color: #007bff;
       color: #fff;
