--- a/src/pages/Procedimientos/Procedimientos.scss
+++ b/src/pages/Procedimientos/Procedimientos.scss
@@ -9,4 +9,38 @@
     .edit{
         margin-top: 35px;
     }
+    .no-data-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 60vh;
+        text-align: center;
+        
+        .no-data-message {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          font-size: 18px;
+          color: #555;
+          
+          .no-data-icon {
+            margin-bottom: 20px;
+          }
+    
+          p {
+            font-family: Roboto;
+            font-size: 16px;
+            font-weight: 400;
+            letter-spacing: 0.15px;
+          }
+        }
+        
+        .edit {
+          margin-top: 10px; 
+          padding: 10px 20px;
+          font-size: 16px;
+        }
+      }
+    
 }
