--- a/src/components/procedimientoForm/ProcedimientoForm.scss
+++ b/src/components/procedimientoForm/ProcedimientoForm.scss
@@ -93,7 +93,7 @@
         line-height: normal;
 
         &:focus {
-          border-color: #007bff; // Color de enfoque
+          border-color: #007bff; 
         }
       }
     }
@@ -124,7 +124,7 @@
     }
 
     p {
-      color: #ff4d4f; // Color de los mensajes de error
+      color: #ff4d4f; 
       font-size: 0.9rem;
       margin: -5px 0 0;
     }
@@ -136,4 +136,62 @@
     gap: 20px;
     align-items: center;
   }
+  
+/* Tablets */
+@media (max-width: 768px) {
+  .procedimiento-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    align-items: center;
+    padding:10px ;
+    border-radius: 8px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1); 
+    
+    .form-input {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      
+      label {
+        font-size: 14px;
+        text-align: left;
+      }
+      
+      input {
+        padding: 8px;
+        width: 93%;
+      }
+    }
+    .delete {
+      grid-column: 2; 
+      grid-row: 3; 
+      align-self: end; 
+    }
+  }
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+
+  .top-content{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   h2{
+    margin-left: 0;
+   }
+  }
+    .procedimiento-form {
+      display: flex;
+      padding: 10px;
+      flex-direction: column;
+      align-items: stretch;
+      border-radius: 8px;
+      box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+      gap: 15px;
+      
+      
+  }
+  
+}
 }
