--- a/src/pages/Procedimientos/Procedimientos.scss
+++ b/src/pages/Procedimientos/Procedimientos.scss
@@ -80,8 +80,6 @@
     padding: 1rem;
 
     .title {
-      // font-size: 20px;
-      // text-align: center;
       margin-bottom: 20px;
     }
 
@@ -124,6 +122,7 @@
         .value {
           font-weight: 600;
           padding-top: 0px;
+          font-size: 14px;
         }
       }
     }
