--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,23 @@ button {
   border: none;
   cursor: pointer;
 }
+
+.swal2-title {
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 143%;
+  letter-spacing: 0.17px;
+  text-align: center;
+}
+
+.swal2-popup.swal2-toast {
+  padding: 16px !important; 
+  width: auto !important;
+  margin: 20px;
+}
+
+.swal2-popup.swal2-toast .swal2-title {
+  margin: 0;
+}
