--- a/src/components/imports.scss
+++ b/src/components/imports.scss
@@ -2,3 +2,5 @@
 @import './procedimientoModal/ProcedimientoModal.scss';
 @import './procedimientosList/ProcedimientosList.scss';
 @import './procedimientoCard/ProcedimientoCard.scss';
+@import './header/Header.scss';
+@import './estudioCard//EstudioCard.scss';
