--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,6 +1,7 @@
 $black: #000;
 $background: #edf3f1;
 $green: #07b284;
+$darkGreen: #3A810E;
 $blue: #3f48ad;
 $white: #fff;
 $dark-blue: #1E2469;
@@ -8,5 +9,6 @@ $border-button: #D6D6EB;
 $dark-gray: #6E6D8C;
 $light-gray: #949494;
 $gray: #F6F6FB;
+$grayMenu: #8B8B8B;
 $border-mid-green: #9CBEB3;
 $notification-dark-blue: #306495;
